# p-board

./: LICENCE  README.md  index.html  main.js  pyproject.toml  server.py  static.html  style.css
p_board/: backend.py
p_board/frontend/: index.html  main.js  style.css  webglplot.umd.min.js
