[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "p_board"
version = "0.1.0"
description = "TensorBoard, but it does not suck."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Visualization",
    "Framework :: Flask",
]
dependencies = [
    "Flask>=2.0",
    "tbparse>=0.0.9",
    "pandas>=1.0",
]

[project.urls]
"Homepage" = "https://github.com/p-doom/p-board"
"Bug Tracker" = "https://github.com/p-doom/p-board/issues"


[project.scripts]
p-board = "p_board.backend:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
p_board = ["frontend/*"]
